Wed Nov 12 08:48:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Fixed fuzz error in the fuzz script itself

Wed Nov 12 08:47:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_WinCE.pm:
          Added HOST_ROOT and more WinCE path tweaks

Wed Nov 12 08:27:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/Process_Win32.pm:
          Removed duplicate basename

        * bin/fuzz.pl:
          Extended the run_test.pl check and enabled it. Ignore TAO and
          CIAO for the moment, we first need to update the existing
          scripts to the new test framework

Wed Nov 12 08:19:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget_WinCE.pm:
          Extended path handling for WinCE

Wed Nov 12 07:47:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/README:
          Updated

Tue Nov 11 22:22:04 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_sys_mman.inl (mmap): Added a fix for a problem where
          ACE_OS::mmap() failed when called with
          file_handle=ACE_INVALID_HANDLE and file_mapping=0.  Thanks to
          Bill Rizzi <rizzi at softserv dot com> for this fix.  This fixes
          bugid 3500.

Tue Nov 11 14:24:00 UTC 2008  Simon Massey<sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Another wchar issue.

Tue Nov 11 13:52:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/config-lynxos.h:
          Missed removal of ACE_HAS_SYSV_IPC for LynxOS5.0.

Tue Nov 11 13:34:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Cached_Conn_Test.cpp:
          Print a timestamp with each iteration

Tue Nov 11 13:26:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Check the return value of thr_setprio

        * ace/Process.cpp: